add swagger to auth handlers
